--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -154,6 +154,10 @@ abbr[title] {
 	border-bottom: 1px dotted;
 }
 
+input[type="text"] {
+	background-color: rgb(250, 255, 189);
+}
+
 input,
 textarea,
 button,
